crates/cifmt-cli/tests/cli/format/snapshots/cli__format__cargo_check__format_detect.snap
---
source: crates/cifmt-cli/tests/cli/format/cargo_check.rs
expression: cmd.run_and_format_with_stdin(Some(&output))
---
Success: true
Exit Code: 0
--- STDOUT ---
error: cannot find value `y` in this scope (error: E0425)
help: a local variable with a similar name exists

failure-note: For more information about this error, try `rustc --explain E0425`.

Build failed

--- STDERR ---
